--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,1 +1,12 @@
+/Book/
+/Controller/
+/DB/
+/ManagmentGUI/
+/MemberGUI/
+/MenuGUI/
 /Role/
+/backIcon.png
+/client/
+/command/
+/ocsf/
+/templateGUI.class
