sagi - 13:40 *Content-getters and setters *Domain-getters and setters *Review-getters and setters *Subject-getters and setters

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,9 +1,6 @@
-/ManagmentGUI/
-/MemberGUI/
-/MenuGUI/
-/Role/
-/client/
-/command/
-/ocsf/
-/templateGUI.class
+/Book/
 /Controller/
+/DB/
+/ManagmentGUI/
+/client/
+/MemberGUI/
