--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,7 +1,10 @@
-/client/
-/command/
-/MenuGUI/
-/Role/
 /Book/
 /Controller/
+/DB/
 /ManagmentGUI/
+/MemberGUI/
+/MenuGUI/
+/Role/
+/client/
+/command/
+/ocsf/
