--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,6 +1,10 @@
-/Book/
-/Controller/
-/DB/
 /ManagmentGUI/
 /MemberGUI/
 /MenuGUI/
+/Role/
+/client/
+/command/
+/ocsf/
+/Book/
+/Controller/
+/DB/
