subject to book book control format control formatmanagmentgui searchreviewGUI new file format panel

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,10 +1,7 @@
+/command/
+/ocsf/
+/Controller/
+/Book/
 /ManagmentGUI/
 /MemberGUI/
-/MenuGUI/
 /Panels/
-/Role/
-/client/
-/command/
-/Book/
-/Controller/
-/DB/
