--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,7 +1,11 @@
+/MenuGUI/
+/Panels/
+/Role/
+/client/
+/command/
+/ocsf/
+/ManagmentGUI/
+/MemberGUI/
 /Book/
 /Controller/
 /DB/
-/ManagmentGUI/
-/MemberGUI/
-/Role/
-/MenuGUI/
