Temporary remove book

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -6,3 +6,19 @@
 /Panels/
 /Role/
 /client/
+/Book/
+/bookGif.gif
+/bookIcon.png
+/IbookIcon.png
+/IbookIcon500.png
+/NewAcount.png
+/Search50.png
+/UpdateUser.png
+/cart.png
+/delete.png
+/graph.png
+/ibookServer.sql
+/inventory.gif
+/inventoy.png
+/libraryPhoto.png
+/ok.png
