--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,24 +1,8 @@
-/Controller/
-/DB/
-/ManagmentGUI/
 /MemberGUI/
 /MenuGUI/
 /Panels/
 /Role/
 /client/
-/Book/
-/bookGif.gif
-/bookIcon.png
-/IbookIcon.png
-/IbookIcon500.png
-/NewAcount.png
-/Search50.png
-/UpdateUser.png
-/cart.png
-/delete.png
-/graph.png
-/ibookServer.sql
-/inventory.gif
-/inventoy.png
-/libraryPhoto.png
-/ok.png
+/command/
+/ocsf/
+/Controller/
