Coral-Review,ReviewController,BokkController,BookRate,Cart,SearchToBook,Validation,ConfirmationReviewGUI,ReviewPanel

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,7 +1,11 @@
-/Book/
-/Controller/
-/ManagmentGUI/
-/MenuGUI/
-/MemberGUI/
 /Panels/
 /Role/
+/client/
+/command/
+/ocsf/
+/ManagmentGUI/
+/MemberGUI/
+/MenuGUI/
+/Book/
+/Controller/
+/DB/
