Coral-SearchBook,ConfirmationReview,ReviewPanel

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,9 +1,11 @@
+/Book/
+/Controller/
+/DB/
 /ManagmentGUI/
 /MemberGUI/
 /MenuGUI/
 /Panels/
 /Role/
+/backIcon.png
 /client/
 /command/
-/ocsf/
-/Controller/
