Coral-ConfirmationReview,reviewController

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,5 +1,13 @@
-/ocsf/
+/Book/
+/Controller/
+/DB/
 /ManagmentGUI/
-/Panels/
 /MemberGUI/
+/MenuGUI/
+/Panels/
+/Role/
+/backIcon.png
+/client/
+/command/
 /download.png
+/ocsf/
