--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,2 +1,13 @@
-/Panels/
+/Book/
+/Controller/
+/DB/
 /ManagmentGUI/
+/MemberGUI/
+/MenuGUI/
+/Panels/
+/Role/
+/backIcon.png
+/client/
+/command/
+/download.png
+/ocsf/
