Coral-BookPanel,statisticsUser,BookPerCart,TimeProject,BookRate,ReviewPanel,ConfirmationReview,searchBook

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,5 +1,11 @@
+/ManagmentGUI/
+/MemberGUI/
+/MenuGUI/
+/Panels/
+/Role/
+/client/
+/command/
+/ocsf/
 /Book/
 /Controller/
-/Panels/
-/MenuGUI/
-/MemberGUI/
+/DB/
