--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,5 +1,10 @@
 /Book/
+/ManagmentGUI/
+/MemberGUI/
+/MenuGUI/
 /Panels/
 /Role/
-/MemberGUI/
-/Controller/
+/FitTests/
+/Extras/
+/Fixtures/
+/client/
