--- a/Project/.classpath
+++ b/Project/.classpath
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="images/" kind="src" path="Extras"/>
+	<classpathentry kind="src" path="Unit test"/>
+	<classpathentry kind="src" path="Acceptance Test"/>
 	<classpathentry kind="src" path="Controller"/>
 	<classpathentry kind="src" path="Boundary"/>
 	<classpathentry kind="src" path="Entity"/>
 	<classpathentry kind="src" path="src/images"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/hensaada/Desktop/mysql-connector-java-3.1.11-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kfir/Desktop/IbookProject/ibookDB/mysql-connector-java-3.1.11-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kfir/Desktop/eclipse/plugins/com.luxoft.eclipse.fit.runner_1.2.7.201108252030/lib/fitlibraryRunner.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kfir/git/iBook/Project/Jars/junit-4.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
