Coral-confirmationReview,ReviewPanel

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,8 +1,16 @@
 /Book/
+/Controller/
+/DB/
+/Extras/
+/Fixtures/
 /ManagmentGUI/
 /MemberGUI/
 /MenuGUI/
 /Panels/
 /Role/
-/Controller/
-/Extras/
+/TestCase/
+/backIcon.png
+/client/
+/command/
+/download.png
+/ocsf/
