Coral-BookPanel,CartCheckBoxPanel...

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,3 +1,18 @@
-/MenuGUI/
+/Book/
+/Controller/
+/DB/
+/Extras/
+/FitResult/
+/FitTests/
+/Fixtures/
+/ManagmentGUI/
 /MemberGUI/
+/MenuGUI/
 /Panels/
+/Role/
+/TestCase/
+/backIcon.png
+/client/
+/command/
+/download.png
+/ocsf/
