--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,18 +1,2 @@
-/Book/
-/Controller/
-/DB/
-/Extras/
-/FitResult/
-/FitTests/
-/Fixtures/
-/ManagmentGUI/
-/MemberGUI/
+/Images/
 /MenuGUI/
-/Panels/
-/Role/
-/TestCase/
-/backIcon.png
-/client/
-/command/
-/download.png
-/ocsf/
