--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,5 +1,17 @@
+/Book/
+/Controller/
+/DB/
+/Extras/
+/FitResult/
+/FitTests/
+/Fixtures/
 /Images/
+/ManagmentGUI/
+/MemberGUI/
 /MenuGUI/
 /Panels/
-/MemberGUI/
-/ManagmentGUI/
+/Role/
+/TestCase/
+/client/
+/command/
+/ocsf/
