--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,6 +1,17 @@
+/Book/
+/Controller/
+/DB/
+/Extras/
+/FitResult/
+/FitTests/
+/Fixtures/
+/Images/
+/ManagmentGUI/
+/MemberGUI/
+/MenuGUI/
+/Panels/
 /Role/
 /TestCase/
-/Controller/
-/Book/
-/Extras/
-/Fixtures/
+/client/
+/command/
+/ocsf/
