Coral-JAVA DOC-User,ReviewController,Book

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,8 +1,17 @@
+/Book/
+/Controller/
+/DB/
+/Extras/
+/FitResult/
+/FitTests/
+/Fixtures/
 /Images/
 /ManagmentGUI/
+/MemberGUI/
 /MenuGUI/
-/Role/
 /Panels/
-/Controller/
-/Extras/
+/Role/
 /TestCase/
+/client/
+/command/
+/ocsf/
