--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,1 +1,16 @@
+/Book/
+/Controller/
+/DB/
+/Extras/
+/FitResult/
+/FitTests/
+/Fixtures/
+/Images/
 /ManagmentGUI/
+/MemberGUI/
+/MenuGUI/
+/Panels/
+/Role/
+/TestCase/
+/client/
+/command/
