--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,11 +1,14 @@
+/Book/
 /Controller/
 /DB/
+/Extras/
+/Fixtures/
+/ManagmentGUI/
 /MemberGUI/
 /MenuGUI/
 /Panels/
-/client/
-/Book/
-/ManagmentGUI/
 /Role/
-/Images/
-/Extras/
+/TestCase/
+/client/
+/command/
+/ocsf/
