Coral JAVA DOC-bookPerCart,ReviewPanel

--- a/Project/bin/.gitignore
+++ b/Project/bin/.gitignore
@@ -1,4 +1,17 @@
+/Book/
+/Controller/
+/DB/
+/Extras/
+/FitResult/
+/FitTests/
+/Fixtures/
+/Images/
+/ManagmentGUI/
 /MemberGUI/
 /MenuGUI/
 /Panels/
-/ManagmentGUI/
+/Role/
+/TestCase/
+/client/
+/command/
+/ocsf/
